fix h-align and css styles

--- a/frontend/src/assets/css/q.css
+++ b/frontend/src/assets/css/q.css
@@ -138,9 +138,6 @@
   animation: spin 1s ease-in-out infinite;
   -webkit-animation: spin 1s ease-in-out infinite;
 }
-q-link-cursor {
-  cursor: pointer;
-}
 
 @keyframes spin {
   to {
@@ -158,13 +155,6 @@ q-link-cursor {
   color: #000 !important;
   position: initial;
 }
-
-.modal-open {
-  /* overflow: hidden; */
-  /* height: 100vh; */
-  /* overflow-y: hidden; */
-}
-
 
 .v-calendar-daily__body {
   /* IE 11 fix */
